--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -4,4 +4,5 @@
 	max-height: calc(100vh - 40px);
 	max-width: 600px;
 	width: 100%;
+	box-sizing: border-box;
 }
